Java update